tests/single_instruction_translation_validation/mcsema/register-variants-samereg/idivq_r64/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:202:35: error: use of undefined value '@__remill_error'
  %26 = tail call %struct.Memory* @__remill_error(%struct.State* nonnull dereferenceable(3376) %1, i64 %25, %struct.Memory* %0) #21
                                  ^
0.01user 0.04system 0:00.05elapsed 103%CPU (0avgtext+0avgdata 27532maxresident)k
0inputs+16outputs (0major+3253minor)pagefaults 0swaps
